[~] fixing border shift

--- a/client/src/Login/Login.css
+++ b/client/src/Login/Login.css
@@ -64,6 +64,10 @@
     flex-direction: row;
 }
 
+.home .login-box .login-box-btns .separator h6 {
+    margin-top: 5px;
+}
+
 .home .login-box .login-box-btns .separator .line {
     width: 50px;
     height: 1px;
