--- a/client/src/Register/Register.css
+++ b/client/src/Register/Register.css
@@ -64,6 +64,10 @@
     flex-direction: row;
 }
 
+.home .register-box .register-box-btns .separator h6 {
+    margin-top: 5px;
+}
+
 .home .register-box .register-box-btns .separator .line {
     width: 50px;
     height: 1px;
